# single-file-database

./: .gitignore  CMakeLists.txt  README.md  main.c  tester.py
client/: CMakeLists.txt  README.md  main.c
client/src/: DynamicBuffer.c  DynamicBuffer.h  Table.c  Table.h  main.c  mapping.c  mapping.h
core/: CMakeLists.txt
core/src/: CMakeLists.txt
core/src/allocator/: allocator.h
core/src/allocator/private/: allocator.c  blocklist.c  blocklist.h
core/src/buffer/: buffer.c
core/src/database/: Database.c  Database.h  StrTableSchemeMap.h  database.c  database.h
core/src/database/cursor/: Cursor.c  Cursor.h  CursorFrom.c  CursorJoin.c  CursorWhere.c  cursor.c  cursor.h  cursor_from.c  cursor_join.c  cursor_where.c
core/src/database/query/: join_builder.c  join_builder.h  result_view.c  result_view.h  row_batch.c  row_batch.h  scheme_builder.c  selector_builder.c  selector_builder.h  updater_builder.c  updater_builder.h  where_condition.c
core/src/database/table/: Column.c  Column.h  Row.c  Row.h  table.c  table.h
core/src/heap/: heap.h
core/src/heap/private/: heap.c
core/src/pool/: pool.c  pool.h
core/src/query/: JoinBuilder.c  JoinBuilder.h  ResultView.c  ResultView.h  RowBatch.c  RowBatch.h  RowBuilder.c  RowBuilder.h  SchemeBuilder.c  SchemeBuilder.h  SelectorBuilder.c  SelectorBuilder.h  updater_builder.c  updater_builder.h  where_condition.c  where_condition.h
core/src/util/exceptions/: exceptions.h
core/src/util/list/: list.h
core/src/util/map/: map_impl.c
core/src/util/vector/: vector.c  vector.h
core/test/: CMakeLists.txt  test_createtable.c  test_delete.c  test_deletetable.c  test_gettables.c  test_insert.c  test_join.c  test_read.c  test_select.c  test_select_where.c  test_update.c
include/: pool.h  table_iterator.h
include/allocator/: allocator.h
include/file/: file.h
include/heap/: buffer.h  heap.h  list.h
include/query/: cursor.h
network/: CMakeLists.txt  README.md
network/example/: CMakeLists.txt  main.c
network/src/: CMakeLists.txt  lib.c  lib.h  network.c  network.h
network/src/proto/: ast.proto  common.proto  message.proto  predicate.proto  request.proto  response.proto
network/test/: CMakeLists.txt  main.c
parser/: CMakeLists.txt
parser/example/: CMakeLists.txt  main.c  test.query
parser/src/: CMakeLists.txt  ast.c  ast.h  grammar.txt  lexer.l  parser.c  parser.h  parser.y  syntax.l
parser/test/: CMakeLists.txt  main.c  test.query
server/: CMakeLists.txt  README.md
server/src/: Connection.c  Connection.h  ConnectionPool.c  ConnectionPool.h  DatabaseWrapper.c  DatabaseWrapper.h  Server.c  Server.h  main.c
src/: CMakeLists.txt  pool.c
src/allocator/: allocator.c  allocator.h  buffer.h
src/allocator/impl/: allocator.c  blocklist.c  blocklist.h  buffer.c
src/allocator/private/: allocator.c  blocklist.c  blocklist.h
src/buffer/: buffer.c  buffer.h
src/database/: database.c  database.h
src/database/cursor/: cursor.c  cursor.h  cursor_from.c  cursor_join.c  cursor_where.c
src/database/query/: join.c  join.h  join_builder.c  query.c  query.h  result_view.c  result_view.h  row_batch.c  row_batch.h  row_set.c  row_set.h  scheme_builder.c  scheme_builder.h  selector_builder.c  selector_builder.h  updater_builder.c  updater_builder.h  where.c  where.h  where_condition.c  where_condition.h
src/database/table/: row.c  row.h  table.c  table.h
src/database/table/impl/: cursor.c  cursor.h  joinset.c  joinset.h
src/heap/: heap.c  heap.h  list.c  list.h  list_iterator.c
src/heap/impl/: heap.c  list.c  list.h  list_iterator.c
src/heap/private/: heap.c  pagelist.c  pagelist.h
src/pool/: pool.c  pool.h
src/table/: table.c  table.h  table_iterator.h
src/util/: defines.h  string.c  string.h
src/util/exceptions/: exceptions.c  exceptions.h
src/util/list/: list.c  list.h
src/util/map/: map.c  map.h  map_impl.c  map_impl.h  set.h
src/util/vector/: vector.c  vector.h
test/: CMakeLists.txt  test.h  test_database.c  test_heap.c  test_map.c  test_pool.c
test/database/: test_database_delete.c  test_database_insert.c  test_database_join.c  test_database_select.c  test_database_select_where.c  test_database_update.c  test_util.c
util/: CMakeLists.txt  defines.h  string.c  util_string.h
util/buffer/: Buffer.c  Buffer.h  buffer.c
util/list/: List.c  List.h  list.c  list.h
util/map/: map.c  map.h  map_impl.c  map_impl.h
util/vector/: vector.c
